# pico_boilerplate

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  readme.md
cmake/: board.hpp.in  version.hpp.in
include/examples/: blink.hpp
